try Bootstrap js instead of npm

--- a/react/package.json
+++ b/react/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "http://germannson.github.io/2720-project",
-  "name": "2720-project",
+  
+  "name": "csci2720",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -12,8 +12,7 @@
     "react-scripts": "3.4.1"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
