--- a/react/package.json
+++ b/react/package.json
@@ -1,5 +1,4 @@
 {
-  
   "name": "csci2720",
   "version": "0.1.0",
   "private": true,
@@ -7,12 +6,12 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "bootstrap-4-react": "0.0.59",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1"
   },
   "scripts": {
-
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
