--- a/react/package.json
+++ b/react/package.json
@@ -39,6 +39,9 @@
     ]
   },
   "devDependencies": {
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
     "gh-pages": "^3.1.0"
-  }
+  },
+  "proxy": "http://localhost:8080"
 }
