--- a/react/package.json
+++ b/react/package.json
@@ -7,10 +7,12 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.2.2",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "reactstrap": "^8.5.1"
   },
@@ -40,5 +42,5 @@
     "express": "^4.17.1",
     "gh-pages": "^3.1.0"
   },
-  "proxy": "http://localhost:8080"
+  "proxy": "http://localhost:3000/"
 }
